# gamernage

./: .dockerignore  .env  .env.github  .gitignore  Makefile  README.md  amplify.yml  docker-compose.yml  docker-compose_dev.yml  render.yml
backend/: Cargo.toml
backend/amplify/: team-provider-info.json
backend/amplify/backend/: backend-config.json
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/api_handler/: handlers.rs
backend/src/api/controller/: auth.rs  menu.rs  mod.rs  order.rs  restaurant_table.rs  todo.rs
backend/src/api/controllers/: auth_controller.rs  community_controller.rs  mod.rs  todo_controller.rs
backend/src/api/handler/: handlers.rs  mod.rs  webauthn.rs
backend/src/api/jwt/: jwt.rs
backend/src/api/lambda_handlers/: auth_handler.rs
backend/src/api/middleware/: jwt_middleware.rs
backend/src/api/middlewares/: jwt_middleware.rs  mod.rs
backend/src/api/model/: todo.rs
backend/src/api/service/: mod.rs  order_service.rs  user_service.rs
backend/src/api/services/: auth_service.rs  community_service.rs  mod.rs  todo_service.rs  user_service.rs
backend/src/api/util/: mail_sender.rs  message.rs
backend/src/application/: mod.rs
backend/src/constants/: custom_type.rs  mod.rs
backend/src/db/: config.rs  mod.rs  pool.rs
backend/src/errors/: auth_error.rs  community_error.rs  custom_error.rs  mod.rs  todo_error.rs  webauthn_error.rs
backend/src/infrastructure/: mod.rs
backend/src/libraries/: app_state.rs  logger.rs  mod.rs
backend/src/tests/: auth_test.rs  community_test.rs  mod.rs  todo_test.rs
(+178 files in other folders)
