[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.6"
actix-service = "2"
futures = "0.3"
# db
bb8 = "0.5"
bb8-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
# postgres = "0.19"
# tokio-postgres = "0.7"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
# auth
jsonwebtoken = "7"
bcrypt = "0.10"
serde = { version = "1", features = ["derive"] }
# mail sender
lettre = "0.11.7"
lettre_email = "0.9.4"
# security
uuid = { version = "1.10.0", features = ["v4", "v7"] }
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
# other, like json, logger
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json"] }
colored= "2"
rand = "0.8"
lazy_static = "1.4"
async-trait = "0.1.82"

